--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,27 @@ services:
       - "8080:8080"
     command: webserver
 
+  airflow-init:
+    image: apache/airflow:2.8.1
+    depends_on:
+      - postgres
+    environment:
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+    entrypoint: >
+      /bin/bash -c "
+      airflow db init &&
+      airflow users create \
+        --username admin \
+        --password admin \
+        --firstname Admin \
+        --lastname User \
+        --role Admin \
+        --email admin@example.com
+      "
+    volumes:
+      - ./dags:/opt/airflow/dags
+
   airflow-scheduler:
     image: apache/airflow:2.8.1
     restart: always
