--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,9 @@ services:
     environment:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
-    entrypoint: >
-      /bin/bash -c "
+    command: >
+      bash -c "
+      until pg_isready -h postgres -p 5432; do sleep 2; done &&
       airflow db init &&
       airflow users create \
         --username admin \
